# leafroot

./: .coveragerc  .dockerignore  .env  .env_user  .gitignore  .pre-commit-config.yaml  .pydeps  .pylintrc  Caddyfile  Dockerfile  Dockerfile-airflow  Dockerfile-dev  Dockerfile-nifi  Dockerfile-prod  Dockerfile-rabbitmq  Dockerfile-spark  README.md  alembic.ini  app.py  current_packages_versions.txt  docker-compose-airflow.yml  docker-compose-elk.yml  docker-compose-kafka.yml  docker-compose-local.yml  docker-compose-mysql.yml  docker-compose-nifi.yml  docker-compose-spark.yml  docker-compose.yml  locustfile.py  makefile  my.cnf  pyproject.toml  requirements.txt  stable_packages_versions.txt  users.json
.circleci/: .env_circleci  config.yml
.devcontainer/: devcontainer.json
airflow/dags/: __init__.py  empty_dag.py  taskflow.py  tutorial.py
airflow/scripts/: entrypoint.sh  healthcheck_flower.sh  heathcheck_scheduler.sh  heathcheck_triggerer.sh  heathcheck_webserver.sh  heathcheck_worker.sh  pyproject.toml
app/: .requirements.txt.un~  __init__.py  alembic.ini  app.py  requirements.txt
app/alembic/: README  env.py
app/alembic/versions/: 08747972d220_added_verified_to_user.py  26ce16becbf2_create_account_table.py  4b16e336a629_moved_id.py  5503d97b7eea_all.py  a07ab730a0e4_moved_id.py  b797b4196eb3_migration_user.py  dfcec6aa0a52_moved_id.py  fd028af2242f_extension_user.py
app/controllers/: __init__.py  users_controllers.py
app/models/: __init__.py  user.py
base_utils/: __init__.py
cache/: __init__.py
celery_rust_workers/: Cargo.toml  pyproject.toml
celery_rust_workers/.github/workflows/: CI.yml
celery_rust_workers/src/: lib.rs
celery_worker/: __init__.py
config/: __init__.py
config/config_files/: .env_dev  .env_example  .env_prod
controllers/: __init__.py  api_controllers.py  atom_controllers.py  base_controllers.py  cassandradb_controllers.py  iceberg_controllers.py  keyvalue_controllers.py  library_controllers.py  photo_controllers.py  quote_controllers.py  redis_controllers.py  task_controllers.py  url_controllers.py  users_controllers.py  utils_controllers.py  ws_controllers.py
data/: __init__.py
data/alembic/: README  env.py
data/alembic/versions/: 13da6d4368eb_glovo_models.py  339cbd9f5092_added_account_quote.py  3a6abe1347e1_particles.py  5503d97b7eea_all.py  73ab563ab716_address_added_to_user.py  a1ff2bafa389_photo_store.py  e24eefb81e98_hash_pass_user.py  f0447f3df18e_making_atoms.py
data/models/: __init__.py  atom.py  quote.py  user.py
data/models/cassandra_db/: __init__.py  chat.py
data/models/iceberg/: __init__.py
data/models/minio/: __init__.py
data/models/mongo_db/: __init__.py  library.py
data/models/particles/: __init__.py
data/models/postgresql/: __init__.py  atom.py  glovo.py  photos.py  quote.py  user.py
data/models/pydantic/: __init__.py  keyvalue.py  message.py  objects.py  particles.py  quote.py  responses.py  url.py
data/models/redis/: __init__.py
data/models/redis_db/: __init__.py  graph.py
data/models/users/: __init__.py
diagrams_schema/: __init__.py  photo_store.py
external_api/: utils.py
faust_worker/: __init__.py  worker.py
kibana/config/: kibana.yml
kubernetes/: spark-pi.yml
logger/: __init__.py
logstash/: Dockerfile
logstash/pipeline/: logstash.conf
middleware/: __init__.py
scripts/: __init__.py  atoms.py  create_users.py  decorator_question.py  decorators.py  files_creator.py  search_data.py  stop_celery_workers.py  test.py  time_test.py  upload_object.py
services/: health_service.py  quote_service.py
services/redis_service/: __init__.py
spark-apps/: departures.py  exp_ex.py  mllib.py  mmcounter.py  normal_u_data.py  postgres_source.py  session_csv.py  streaming.py  streaming_checkpoint.py  test.ipynb  u_data.py  udf.py  utils.py
spark-data/: department.csv  departuredelays.csv  listings.csv  mmcandy.csv  person.csv
spark-data/sf-airbnb-clean.parquet/: _committed_4320459746949313749
spark-data/text_stream/data_stream/: test1.txt  test2.txt  test3.txt
spark-data/text_stream/result/: part-00000-9f2433e6-a657-4a93-b289-4fbe5e97e6e9-c000.txt  part-00000-c980a20d-07f0-45c3-8622-48028f6a52c1-c000.txt
spark_apps/: __init__.py  departures.py  exp_ex.py  mllib.py  mmcounter.py  normal_u_data.py  postgres_source.py  session_csv.py  streaming.py  streaming_checkpoint.py  u_data.py  udf.py  utils.py
templates/: login.html  main.html
tests/: __init__.py  conftest.py  test_api_controller.py  test_atom_controllers.py  test_atom_models.py  test_base_controler.py  test_base_controllers.py  test_external_api.py  test_glovo_models.py  test_initial.py  test_keyvalue_controller.py  test_library_mongo.py  test_library_mongo_models.py  test_photo_store.py  test_populate_db.py  test_quote_controllers.py  test_redis_controllers.py  test_short_url.py  test_tasks_controllers.py  test_user_controllers.py  test_utils.py  test_utils_controllers.py  test_web_sockets.py
tests/test_wheather/: __init__.py  test_endpoint.py
utils/: __init__.py  env.py  external_api.py  requests_parser.py  spark-test.py  spark_test.py
