[tool.black]
line-length=79

[tool.bandit]
exclude_dirs = ["tests", "scripts", "utils"]

[tool.poetry]
name = "leafroot"
version = "0.1.0"
description = "leaf root dependencies"
authors = ["mihai011 <mihaimihai011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
aioresponses = "^0.7.4"
aiosignal = "^1.3.1"
alembic = "^1.10.4"
anyio = "^3.6.2"
asgiref = "^3.6.0"
astroid = "^2.15.4"
async-timeout = "^4.0.2"
asyncpg = "^0.27.0"
attrs = "^23.1.0"
bandit = "^1.7.5"
bcrypt = "^4.0.1"
black = "^23.3.0"
blacken-docs = "^1.13.0"
celery = "^5.2.7"
certifi = "^2022.12.7"
cffi = "^1.15.1"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
coverage = "^7.2.3"
cryptography = "^40.0.2"
dill = "^0.3.6"
doc8 = "^1.1.1"
docformatter = "^1.6.4"
ecdsa = "^0.18.0"
execnet = "^1.9.0"
fastapi = "^0.95.1"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
flower = "^1.2.0"
frozenlist = "^1.3.3"
greenlet = "^2.0.2"
gunicorn = "^20.1.0"
h11 = "^0.14.0"
httpcore = "^0.17.0"
httptools = "^0.5.0"
httpx = "^0.24.0"
idna = "^3.4"
iniconfig = "^2.0.0"
ipython = "^8.12.0"
isort = "^5.12.0"
jinja2 = "^3.1.2"
lazy-object-proxy = "^1.9.0"
maturin = "^0.14.17"
mccabe = "^0.7.0"
motor = "^3.1.2"
multidict = "^6.0.4"
mypy = "^1.2.0"
mypy-extensions = "^1.0.0"
orjson = "^3.8.10"
packaging = "^23.1"
passlib = "^1.7.4"
pathspec = "^0.11.1"
pika = "^1.3.1"
platformdirs = "^3.5.0"
pluggy = "^1.0.0"
pre-commit = "^3.2.2"
psycopg2 = "^2.9.6"
py = "^1.11.0"
pyasn1 = "^0.5.0"
pycparser = "^2.21"
pydantic = {extras = ["email"], version = "^1.10.7"}
pylint = "^2.17.3"
pyparsing = "^3.0.9"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-cover = "^3.0.0"
pytest-coverage = "^0.0"
pytest-forked = "^1.6.0"
pytest-xdist = "^3.2.1"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
pyyaml = "^6.0"
redis = "^4.5.4"
requests = "^2.29.0"
rfc3986 = "^2.0.0"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.0"
sqlalchemy = "^2.0.11"
sqlalchemy-serializer = "^1.4.1"
sqlalchemy-utils = "^0.41.1"
starlette = "^0.26.1"
starlette-context = "^0.3.6"
toml = "^0.10.2"
tomli = "^2.0.1"
tomlkit = "^0.11.8"
tqdm = "^4.65.0"
typing-extensions = "^4.5.0"
uvicorn = "^0.21.1"
uvloop = "^0.17.0"
watchgod = "^0.8.2"
websockets = "^11.0.2"
wrapt = "^1.15.0"
yarl = "^1.9.2"
sentry-sdk = "^1.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
