[tool.black]
line-length=79

[tool.bandit]
exclude_dirs = ["tests", "scripts", "utils"]

[tool.poetry]
name = "leafroot"
version = "0.1.0"
description = "leaf root dependencies"
authors = ["mihai011 <mihaimihai011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiohttp = "^3.8.5"
aioresponses = "^0.7.4"
aiosignal = "^1.3.1"
alembic = "^1.12.0"
anyio = "^3.7.1"
asgiref = "^3.7.2"
astroid = "^2.15.6"
async-timeout = "^4.0.3"
asyncpg = "^0.27.0"
attrs = "^23.1.0"
bandit = "^1.7.5"
bcrypt = "^4.0.1"
black = "^23.7.0"
blacken-docs = "^1.16.0"
celery = "^5.3.1"
certifi = "^2022.12.7"
cffi = "^1.15.1"
charset-normalizer = "^3.2.0"
click = "^8.1.7"
coverage = "^7.3.0"
cryptography = "^40.0.2"
dill = "^0.3.6"
doc8 = "^1.1.1"
docformatter = "^1.7.5"
ecdsa = "^0.18.0"
execnet = "^1.9.0"
fastapi = "^0.95.1"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
flower = "^1.2.0"
frozenlist = "^1.4.0"
greenlet = "^2.0.2"
gunicorn = "^20.1.0"
h11 = "^0.14.0"
httpcore = "^0.17.0"
httptools = "^0.5.0"
httpx = "^0.24.0"
idna = "^3.4"
iniconfig = "^2.0.0"
ipython = "^8.15.0"
isort = "^5.12.0"
jinja2 = "^3.1.2"
lazy-object-proxy = "^1.9.0"
maturin = "^0.14.17"
mccabe = "^0.7.0"
motor = "^3.3.1"
multidict = "^6.0.4"
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"
orjson = "^3.9.5"
packaging = "^23.1"
passlib = "^1.7.4"
pathspec = "^0.11.1"
pika = "^1.3.2"
platformdirs = "^3.10.0"
pluggy = "^1.3.0"
pre-commit = "^3.3.3"
psycopg2 = "^2.9.7"
py = "^1.11.0"
pyasn1 = "^0.5.0"
pycparser = "^2.21"
pydantic = {extras = ["email"], version = "^1.10.12"}
pylint = "^2.17.5"
pyparsing = "^3.1.1"
pytest = "^7.4.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-cover = "^3.0.0"
pytest-coverage = "^0.0"
pytest-forked = "^1.6.0"
pytest-xdist = "^3.3.1"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
pyyaml = "^6.0.1"
redis = "^4.6.0"
requests = "^2.31.0"
rfc3986 = "^2.0.0"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.0"
sqlalchemy = "^2.0.20"
sqlalchemy-serializer = "^1.4.1"
sqlalchemy-utils = "^0.41.1"
starlette = "^0.26.1"
starlette-context = "^0.3.6"
toml = "^0.10.2"
tomli = "^2.0.1"
tomlkit = "^0.11.8"
tqdm = "^4.66.1"
typing-extensions = "^4.7.1"
uvicorn = "^0.21.1"
uvloop = "^0.17.0"
watchgod = "^0.8.2"
websockets = "^10.4"
wrapt = "^1.15.0"
yarl = "^1.9.2"
sentry-sdk = "^1.30.0"
polars = "^0.18.2"
pyarrow = "^12.0.1"
faust-streaming = "^0.10.13"
scylla-driver = "^3.26.2"
surrealdb = "^0.3.1"
faker = "^18.13.0"
pyspark = "3.4.0"
pandas = "^2.1.1"
grpcio = "^1.59.0"
google = "^3.0.0"
google-api-python-client = "^2.101.0"
grpcio-status = "^1.59.0"
timeout-decorator = "^0.5.0"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
