[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["leafroot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
apache-airflow = {extras = ["celery", "redis"], version = "^2.6.1"}
psycopg2-binary = "^2.9.6"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
